[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/BowTemp.png" type="Texture" id=1]
[ext_resource path="res://Player/Bow.gd" type="Script" id=2]

[node name="Bow" type="Node2D" groups=[
"Weapons",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 5, 0 )
texture = ExtResource( 1 )

[node name="ShotPoint" type="Position2D" parent="."]
position = Vector2( 10, 0 )

[node name="Hold" type="Timer" parent="."]
one_shot = true

[node name="KiCal" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="KiCal" to="." method="_on_KiCal_timeout"]
